k8s/base/notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: ghcr.io/abubakar-tq/notification-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8887
          env: []
          readinessProbe:
            httpGet:
              path: /bank/actuator/health
              port: 8887
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 30
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - port: 8887
      targetPort: 8887
